--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^16.12.0",
     "react-fontawesome": "^1.7.1",
     "react-helmet": "^5.2.1",
+    "react-images": "^1.1.3",
     "react-pdf": "^4.1.0",
     "react-photo-gallery": "^8.0.0"
   },
